Fix overflow issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -326,7 +326,7 @@ header {
   height: auto;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: flex-end;
 }
 
 .eligibility-page-hero-second {
@@ -387,8 +387,15 @@ header {
   height: 100%;
 }
 
-.eligibility-video {
-  margin-top: 50px;
+.explainer-video-p {
+  margin-top: 100px;
+  font-size: 1.2rem;
+  color: #131313;
+  margin-bottom: 10px;
+}
+
+.explainer-video-p i {
+  color: #131313;
 }
 
 /* Eligibility page main - form section  */
@@ -464,11 +471,6 @@ header {
   display: flex;
   justify-content: space-between;
   gap: 0.1rem;
-}
-
-.socialization-first,
-.socialization-second {
-  align-items: center;
 }
 
 .behavior-second {
@@ -557,12 +559,14 @@ header {
   width: 50%;
 }
 
-.vaccinations-first-header,
-.vaccinations-second-header-container legend,
-.behavior-first-header-container legend,
-.behavior-second-header-container legend,
-.socialization-first-header-container legend,
-.socialization-second-header-container legend {
+.general-details-third-header-container p,
+.general-details-fourth-header-container p,
+.vaccinations-first-header-container p,
+.vaccinations-second-header-container p,
+.behavior-first-header-container p,
+.behavior-second-header-container p,
+.socialization-first-header-container p,
+.socialization-second-header-container p {
   color: #131313;
   margin-left: 3px;
   font-weight: 500;
@@ -572,6 +576,7 @@ header {
 .socialization-first-header-container h3,
 .socialization-second-header-container h3 {
   margin-top: 4px;
+  margin-left: 4px;
 }
 
 .general-details-third-radio-container,
@@ -1436,14 +1441,19 @@ header {
     margin-top: 20px;
   }
 
-  .general-details-third h3,
-  .general-details-fourth h3,
-  .vaccinations-first-header-container h3,
-  .vaccinations-second-header-container h3,
-  .behavior-first-header-container h3,
-  .behavior-second-header-container h3,
-  .socialization-first-header-container h3 {
-    margin-left: 0px;
+  .general-details-third p,
+  .general-details-fourth p,
+  .vaccinations-first-header-container p,
+  .vaccinations-second-header-container p,
+  .behavior-first-header-container p,
+  .behavior-second-header-container p,
+  .socialization-first-header-container p {
+    margin-left: 4px;
+  }
+
+  .socialization-first-header-container p,
+  .socialization-second-header-container p {
+    margin-left: 4px;
   }
 
   .vaccinations h2,
@@ -1678,9 +1688,12 @@ header {
 
   .nav-links {
     display: none;
+    padding-top: 10px;
   }
 
   header {
+    padding-top: 10px;
+    padding-bottom: 8px;
     position: relative;
   }
 
@@ -1689,8 +1702,9 @@ header {
   }
 
   .nav-links ul {
-    padding: 0;
+    padding: 0 10px;
     padding-top: 15px;
+    padding-right: 15px;
     flex-direction: column;
     justify-content: center;
   }
@@ -1859,7 +1873,7 @@ header {
     height: auto;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
   }
 
   .eligibility-page-hero-second {
@@ -1876,11 +1890,11 @@ header {
     height: 350px;
     margin-bottom: 50px;
     object-fit: contain;
-    margin-left: 60px;
+    margin-left: 40px;
   }
 
   .eligibility-page-hero-second h2 {
-    margin-top: -80px;
+    margin-top: -50px;
     position: relative;
     color: #131313;
     font-size: 3.1rem;
@@ -1894,12 +1908,21 @@ header {
     left: -10px;
   }
 
+  .eligibility-page-hero-second p {
+    padding: 0 20px;
+  }
+
   /* Eligibility page main - video section  */
 
   .eligibility-video-container {
-    margin-top: 100px;
+    margin-top: 0px;
     width: 100%;
     height: 100%;
+  }
+
+  .explainer-video-p {
+    font-size: 1rem;
+    margin-top: 100px;
   }
 
   /* Eligibility page main - form section  */
@@ -2152,8 +2175,8 @@ header {
   }
 
   .location-img {
-    width: 350px;
-    height: 350px;
+    width: 320px;
+    height: 320px;
     object-fit: contain;
     margin-left: 60px;
   }
@@ -2189,6 +2212,7 @@ header {
     bottom: -30px;
   }
   .hero-content h2 {
+    font-size: 1.6rem;
     margin-bottom: 40px;
   }
 
